# R2D2

./: .gitignore  Cargo.toml  LICENSE
compiled/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: crypto.rs  lib.rs  main.rs  parse.rs  shatter.rs  shuffle.rs  strencrypt.rs
src/shatter/: linux.rs  windows.rs  x86_64.rs  x86_64_prefixes.json
tests/: 00-compile.rs  01-hello_world.rs  02-crazy.rs  test_driver.rs
tests/complex/rand/: Cargo.toml
tests/complex/rand/rand_chacha/: Cargo.toml
tests/complex/rand/rand_core/: Cargo.toml
tests/complex/rand/rand_distr/: Cargo.toml
tests/complex/rand/rand_pcg/: Cargo.toml
tests/single/01-hello_world/: Cargo.toml
tests/single/02-prints/: Cargo.toml
tests/single/02-prints/src/: main.rs
tests/single/03-crazy/: Cargo.toml
tests/single/04-shuffle_prints/: Cargo.toml
tests/single/04-shuffle_prints/src/: main.rs
tests/single/05-shuffle_let/: Cargo.toml
tests/single/05-shuffle_let/src/: main.rs
tests/single/06-shuffle_nested/: Cargo.toml
tests/single/06-shuffle_nested/src/: main.rs
tests/single/07-assert_shatter/: Cargo.toml
tests/single/07-assert_shatter/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
