[package]
name = "r2d2_macros"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.85", features = ["full", "visit-mut", "fold", "extra-traits"] }
quote = "1.0.14"
proc-macro2 = "1.0.36"
prettyplease = "0.1.1"
chacha20poly1305 = { version = ">=0.9", features = ["alloc"]}
r2d2_utils = { path = "../utils" }
